--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,12 @@ div#clock {
     margin: 0 auto;
 }
 
+h1 {
+	font-size: 2em;
+	margin-top: 2em;
+	margin-bottom: 0;
+}
+
 div#timers {
     display: flex;
     flex-direction: row;
@@ -24,6 +30,7 @@ div.timer {
 }
 
 h2 {
+	margin: 0;
     margin-bottom: .25em;
 }
 
