--- a/src/style.css
+++ b/src/style.css
@@ -61,16 +61,18 @@ div.increment {
 }
 
 div#break-length, div#session-length {
-    font-size: 1.5em;
-    padding: 1em;
+    font-size: 2em;
+    padding: .5em;
     width: 1.5em;
+    margin: auto 0;
 }
 
 button.lengthBtn {
-	font-size: 1em;
-	width: 1.75em;
-	height: 1.75em;
+	font-size: 2em;
+	width: 1.25em;
+	height: 1.25em;
 	margin: 0.12em;
+	padding: 0;
 }
 
 div#count-time-display {
@@ -109,9 +111,9 @@ h3#time-left {
 }
 
 button#start_stop, button#reset {
-    font-size: 1em;
+    font-size: 1.75em;
     padding: .5em;
     margin: .5em;
-    width: 3em;
-    height: 3em;
+    width: 2.75em;
+    height: 2.75em;
 }
