--- a/src/style.css
+++ b/src/style.css
@@ -13,9 +13,8 @@ div#clock {
 }
 
 h1 {
-	font-size: 2em;
-	margin-top: 2em;
-	margin-bottom: 0;
+	font-size: 1.5em;
+	margin: .5em auto;
 	color:#D8412C;
 }
 
@@ -27,12 +26,12 @@ div#timers {
 }
 
 div.timer {
-	padding: 1em 2em .5em 2em;
+    padding: 1em 0;
     width: 50%;
-
 }
 
 h2 {
+    font-size: 1.2em;
 	margin: 0;
     margin-bottom: .25em;
 }
@@ -60,7 +59,6 @@ button:hover, button:focus {
 button:active,  {
 	border: 1.5px solid #B03220;
 }
-
 
 div.increment {
 	display: flex;
@@ -93,7 +91,7 @@ button.lengthBtn:active, button.lengthBtn:focus {
 }
 
 div#count-time-display {
-    width: 70%;
+    max-width: 390px;
     margin: 0 auto;
     margin-bottom: .25em;
     font-size: 2em;
@@ -141,3 +139,16 @@ button#start_stop {
     color: #000;
     border: 1px solid #29b748;
 }*/
+
+/*large screen styles*/
+@media screen and (min-width: 525px) {
+    h1 {
+        font-size: 2em;
+        margin-top: 2em;
+    }
+
+    h2 {
+        font-size: 1.5em;
+    }
+
+}
